lang/parser/src/tests/snapshots/flylang_parser__tests__records__error_record_object_creation_without_new_keyword.snap
---
source: lang/parser/src/tests/records.rs
expression: code
---
Err(
    MissingNewKeyword {
        token: Token {
            value: OpenBrace,
            address: <Address `<test>`: 39..40>,
        },
        name_address: <Address `<test>`: 37..38>,
    },
)
