lang/parser/src/tests/snapshots/flylang_parser__tests__records__error_record_with_reserved_keyword_method.snap
---
source: lang/parser/src/tests/records.rs
expression: code
---
Err(
    ReservedKeywordUsage {
        address: <Address `<test>`: 41..44>,
        keyword: "new",
    },
)
