lang/parser/src/tests/snapshots/flylang_parser__tests__records__error_record_with_reserved_keyword_name.snap
---
source: lang/parser/src/tests/records.rs
expression: code
---
Err(
    UnexpectedToken {
        token: Token {
            value: New,
            address: <Address `<test>`: 8..11>,
        },
        expected: None,
    },
)
