lang/parser/src/tests/snapshots/flylang_parser__tests__records__record_and_static_functions.snap
---
source: lang/parser/src/tests/records.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "A",
                    8..9,
                ),
                visibility: Global,
                fields: Spanned(
                    [],
                    10..12,
                ),
            },
        ),
        Function(
            Function {
                name: Spanned(
                    Path {
                        parent: Spanned(
                            Identifier(
                                "A",
                            ),
                            26..27,
                        ),
                        value: Spanned(
                            Identifier(
                                "create",
                            ),
                            29..35,
                        ),
                    },
                    26..35,
                ),
                visibility: Global,
                is_static: true,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        38..40,
                    ),
                ),
            },
        ),
    ],
)
