lang/parser/src/tests/snapshots/flylang_parser__tests__records__record_with_method.snap
---
source: lang/parser/src/tests/records.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "Test",
                    8..12,
                ),
                visibility: Global,
                fields: Spanned(
                    [],
                    13..15,
                ),
            },
        ),
        Function(
            Function {
                name: Spanned(
                    Path {
                        parent: Spanned(
                            Identifier(
                                "Test",
                            ),
                            22..26,
                        ),
                        value: Spanned(
                            Identifier(
                                "say_hi",
                            ),
                            28..34,
                        ),
                    },
                    22..34,
                ),
                visibility: Global,
                is_static: false,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [
                                Expr(
                                    Spanned(
                                        Call {
                                            callee: Spanned(
                                                Identifier(
                                                    "print",
                                                ),
                                                40..45,
                                            ),
                                            parameters: [
                                                Spanned(
                                                    String(
                                                        "Hi",
                                                    ),
                                                    46..50,
                                                ),
                                            ],
                                        },
                                        46..51,
                                    ),
                                ),
                            ],
                        ),
                        37..53,
                    ),
                ),
            },
        ),
    ],
)
